--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE123</version>
         </dependency>
+        <dependency>
+            <groupId>rs2xml</groupId>
+            <artifactId>rs2xml</artifactId>
+            <version>rs2xml</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
