--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version>
+            <version>8.0.24</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.external</groupId>
@@ -17,9 +17,9 @@
             <version>RELEASE123</version>
         </dependency>
         <dependency>
-            <groupId>rs2xml</groupId>
+            <groupId>net.proteanit.sql</groupId>
             <artifactId>rs2xml</artifactId>
-            <version>rs2xml</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
     <properties>
